[gd_scene load_steps=9 format=3 uid="uid://ck4yyemva34or"]

[ext_resource type="Texture2D" uid="uid://d3banaopd5ei1" path="res://assets/sprites/enemies/slimeWalk1.png" id="1_n6pvg"]
[ext_resource type="Script" uid="uid://3gu11g6i0hv4" path="res://scripts/slime.gd" id="1_pjw23"]
[ext_resource type="Texture2D" uid="uid://bq37cpn5nn6sv" path="res://assets/sprites/enemy sprites extra/slime_dead.png" id="2_ankfk"]
[ext_resource type="PackedScene" uid="uid://630jbmhj0ig4" path="res://scenes/killzone.tscn" id="2_n6pvg"]
[ext_resource type="Texture2D" uid="uid://cc5m56mm1yitx" path="res://assets/sprites/enemies/slimeWalk2.png" id="2_pjw23"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2npkn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ankfk")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_n6pvg")
}, {
"duration": 1.0,
"texture": ExtResource("2_pjw23")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjw23"]
size = Vector2(70, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b58ev"]
size = Vector2(63, 9.5)

[node name="Slime" type="Node2D"]
script = ExtResource("1_pjw23")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_2npkn")
autoplay = "default"
flip_h = true

[node name="Killzone" parent="." instance=ExtResource("2_n6pvg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_pjw23")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(-4, 0)
target_position = Vector2(24, 0)

[node name="RayCastLefts" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-24, 0)

[node name="GetDemageBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GetDemageBox"]
position = Vector2(0.5, -24.25)
shape = SubResource("RectangleShape2D_b58ev")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="GetDemageBox" to="." method="_on_get_demage_box_body_entered"]
